Fix chat friends drawer on mobile

--- a/sass/components/messages.scss
+++ b/sass/components/messages.scss
@@ -5,7 +5,7 @@
 .message-list {
   width: 100%;
   margin: 0;
-  padding: 1.5rem 0.5rem 0.5rem;
+  padding: 1.5rem 1rem 0.5rem;
   display: grid;
   grid-template-columns: 100%;
   gap: 1rem;
@@ -33,6 +33,18 @@
     display: block;
     width: 100%;
     height: 100%;
+    background-color: variables.$primary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  // message__avatar-name
+  &__avatar-name {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: uppercase;
   }
 
   // message__message-buble
